test_programs/compile_failure/noirc_frontend_tests_deny_capturing_mut_variable_without_reference_in_lambda/src/main.nr

    fn main() {
        let mut x = 3;
        let f = || {
            x += 2;
        };
        f();
        assert(x == 5);
    }
    